fixed button overflow error

--- a/front-end/styles/styles.css
+++ b/front-end/styles/styles.css
@@ -22,3 +22,7 @@ div.spaceHolder{
 div.navbar > span > a{
 	color: white;
 }
+
+md-content{
+	overflow:hidden;
+}
